--- a/firebase.json
+++ b/firebase.json
@@ -6,9 +6,11 @@
       "**/.*",
       "**/node_modules/**"
     ]
-  },
+  }
+}
+{
   "rules": {
-    ".read": "now < 1692327600000",
-    ".write": "now < 1692327600000"
+    ".read": "now < 1692327600000",  // 2023-8-18
+    ".write": "now < 1692327600000",  // 2023-8-18
   }
 }
