--- a/functions/package.json
+++ b/functions/package.json
@@ -1,11 +1,16 @@
 {
-    "name": "functions",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "firebase-admin": "^11.10.1"
-    }
-  }
-  
+  "name": "functions",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1"
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
